Fix overflowing scroll section in Copilot Sources Modal (#4428)
* updated styles for wrapper div

* updated border to outline in table header

* Update index.module.less

--- a/phytoplankton-console/src/pages/case-management/components/Copilot/index.module.less
+++ b/phytoplankton-console/src/pages/case-management/components/Copilot/index.module.less
@@ -17,3 +17,8 @@
   justify-content: space-between;
   width: 100%;
 }
+
+.table {
+  overflow-x: auto;
+  overflow-y: auto;
+}
